Fixed spacing

--- a/client/src/css/Prospects.css
+++ b/client/src/css/Prospects.css
@@ -10,6 +10,10 @@
     /* border: 1px solid white; */
 }
 
+#table-wrap {
+    height: 300px;
+}
+
 #data-col {
     height: 300px;
     border: 1px white solid;
